@@ -1,102 +1,110 @@
 package br.senai.sc.communitex.service.impl;
 
-
 import br.senai.sc.communitex.dto.EmpresaRequestDTO;
 import br.senai.sc.communitex.dto.EmpresaResponseDTO;
-import br.senai.sc.communitex.exception.BusinessExpection;
+import br.senai.sc.communitex.exception.BusinessException;
 import br.senai.sc.communitex.exception.ResourceNotFoundException;
 import br.senai.sc.communitex.model.Empresa;
 import br.senai.sc.communitex.model.Usuario;
 import br.senai.sc.communitex.repository.EmpresaRepository;
 import br.senai.sc.communitex.service.EmpresaService;
 import br.senai.sc.communitex.service.UsuarioService;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.BeanUtils;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
+@Slf4j
 public class EmpresaServiceImpl implements EmpresaService {
 
     private final EmpresaRepository empresaRepository;
     private final UsuarioService usuarioService;
     private final PasswordEncoder passwordEncoder;
 
-    public EmpresaServiceImpl(EmpresaRepository empresaRepository, UsuarioService usuarioService, PasswordEncoder passwordEncoder) {
-        this.empresaRepository = empresaRepository;
-        this.usuarioService = usuarioService;
-        this.passwordEncoder = passwordEncoder;
-    }
-
     @Override
+    @Transactional(readOnly = true)
     public Empresa findEntityById(Long id) {
         return empresaRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Empresa não encontrada com ID: " + id));
     }
 
+    @Override
+    @Transactional(readOnly = true)
     public List<EmpresaResponseDTO> findAll() {
         return empresaRepository.findAll().stream()
                 .map(this::toResponseDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    @Override
+    @Transactional(readOnly = true)
     public EmpresaResponseDTO findById(Long id) {
         return empresaRepository.findById(id)
                 .map(this::toResponseDTO)
                 .orElseThrow(() -> new ResourceNotFoundException("Empresa não encontrada com ID: " + id));
-
     }
 
+    @Override
     @Transactional
     public EmpresaResponseDTO create(EmpresaRequestDTO dto) {
+        empresaRepository.findByCnpj(dto.cnpj())
+                .ifPresent(existing -> {
+                    throw new BusinessException("Já existe uma empresa cadastrada com o CNPJ: " + dto.cnpj());
+                });
 
-        Optional<Empresa> existente = empresaRepository.findByCnpj(dto.cnpj());
-        if (existente.isPresent()) {
-            throw new BusinessExpection("Já existe uma empresa cadastrada com o CNPJ: " + dto.cnpj());
-        }
+        usuarioService.findByUsername(dto.emailRepresentante())
+                .ifPresent(existing -> {
+                    throw new BusinessException("Já existe um usuário cadastrado com o email: " + dto.emailRepresentante());
+                });
 
-        // Criar e persistir o Usuario do Representante
-        Optional<Usuario> usuarioExistente = usuarioService.findByUsername(dto.emailRepresentante());
-        if (usuarioExistente.isPresent()) {
-            throw new BusinessExpection("Já existe um usuário cadastrado com o email: " + dto.emailRepresentante());
-        }
+        var usuarioRepresentante = Usuario.builder()
+                .username(dto.emailRepresentante())
+                .password(passwordEncoder.encode(dto.senhaRepresentante()))
+                .role("ROLE_EMPRESA")
+                .nome(dto.nomeRepresentante())
+                .build();
+        var usuarioSalvo = usuarioService.save(usuarioRepresentante);
 
-        Usuario usuarioRepresentante = new Usuario();
-        usuarioRepresentante.setUsername(dto.emailRepresentante());
-        usuarioRepresentante.setPassword(passwordEncoder.encode(dto.senhaRepresentante()));
-        usuarioRepresentante.setRole("ROLE_EMPRESA");
-        usuarioRepresentante.setNome(dto.nomeRepresentante());
-        Usuario usuarioSalvo = usuarioService.save(usuarioRepresentante);
+        var empresa = Empresa.builder()
+                .razaoSocial(dto.razaoSocial())
+                .cnpj(dto.cnpj().replaceAll("\\D", ""))
+                .nomeFantasia(dto.nomeFantasia())
+                .email(dto.email())
+                .telefone(dto.telefone() != null ? dto.telefone().replaceAll("\\D", "") : null)
+                .usuarioRepresentante(usuarioSalvo)
+                .build();
 
-        // Criar e persistir a Empresa
-        Empresa empresa = new Empresa();
-        BeanUtils.copyProperties(dto, empresa, "usuarioRepresentante");
-        empresa.setCnpj(dto.cnpj().replaceAll("\\D", ""));
-        empresa.setTelefone(dto.telefone().replaceAll("\\D", ""));
-        empresa.setUsuarioRepresentante(usuarioSalvo);
-
-        return toResponseDTO(empresaRepository.save(empresa));
+        var saved = empresaRepository.save(empresa);
+        log.info("Empresa criada com ID: {}", saved.getId());
+        return toResponseDTO(saved);
     }
 
+    @Override
+    @Transactional
     public EmpresaResponseDTO update(Long id, EmpresaRequestDTO dto) {
-        Empresa empresa = empresaRepository.findById(id)
+        var empresa = empresaRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Empresa não encontrada com ID: " + id));
 
-        BeanUtils.copyProperties(dto, empresa);
-        empresa.setId(id);
+        BeanUtils.copyProperties(dto, empresa, "id", "usuarioRepresentante", "representantes", "adocaos");
 
+        log.info("Empresa ID: {} atualizada", id);
         return toResponseDTO(empresaRepository.save(empresa));
-
     }
 
+    @Override
+    @Transactional
     public void delete(Long id) {
         if (!empresaRepository.existsById(id)) {
             throw new ResourceNotFoundException("Empresa não encontrada com ID: " + id);
         }
+        empresaRepository.deleteById(id);
+        log.info("Empresa ID: {} excluída", id);
     }
 
     private EmpresaResponseDTO toResponseDTO(Empresa empresa) {
